# sevicontrol

./: .gitignore  Readme.md  SeviControl.py  commands.py  config.yaml  config.yaml.example  connectorDummy.py  connectorFactory.py  connectorRS485.py  connectorThread.py  controlThread.py  cronCommands.py  cron_data.json.example  fanout.py  inMemoryLogHandler.py  linker.py  modes.py  mqtt.py  panelStatus.py  pauseThread.py  pyproject.toml  requirements.txt  sleepThread.py  version.py
provisioning/etc/nginx/: nginx.conf
provisioning/etc/systemd/system/: sevi-control.service  sevi-control.socket
provisioning/etc/tmpfiles.d/: sevi-control.conf
static/: controlBox.js  index.html  material-components-web.min.css  material-components-web.min.js  seviControl.js  theme.css  topBar.js
static/icons/: manifest.json
tools/: sniffer.py
